--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -1,4 +1,4 @@
-﻿-----고정보스-----
+﻿-----고정이벤트-----
 bossname = 가름
 bosstime = 12:00
 genPeriod = 24:00
@@ -25,7 +25,7 @@ bosstime = 20:00
 genPeriod = 24:00
 startDate = 2021-06-28
 before_alert_ment = 입니다
-alert_ment = 탐 입니다. 요툰하임으로 오세요
+alert_ment = 탐 입니다.
 
 bossname = 발할라대전
 bosstime = 21:00
