--- a/boss.ini
+++ b/boss.ini
@@ -1,86 +1,98 @@
 ﻿﻿-----요툰하임-----
 bossname = 야른
 gentime = 12:00
-nogencheck = 0
+nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 요툰 공허의골짜리로 오세요
+mungtime = 1
 
 bossname = 파르바
 gentime = 12:00
-nogencheck = 0
+nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 요툰 오크부락으로 오세요
+mungtime = 1
 
 bossname = 흐니르
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 요툰 남부황무지로 오세요
+mungtime = 1
 
 bossname = 셀로비아
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 요툰 거미군락으로 오세요
+mungtime = 1
 
 bossname = 페티
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 요툰 이둔의정원로 오세요
+mungtime = 1
 
 bossname = 바우티
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 요툰 고대종싸움터로 오세요
+mungtime = 1
 
 bossname = 니드호그
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 요툰 익룡의안식처로 오세요
-
-﻿-----니다벨리르-----
+mungtime = 1
 
 bossname = 라이노르
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 니다 코뿔소서식지로 오세요
+mungtime = 1
 
 bossname = 비요른
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 니다 도굴단요새로 오세요
+mungtime = 1
 
 bossname = 헤르모드
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 니다 안드바리의 대장간으로 오세요
+mungtime = 1
 
 bossname = 스칼라니르
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 니다 죽은용의둥지로 오세요
+mungtime = 1
 
 bossname = 브륀힐드
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 니다 타락의땅으로 오세요
+mungtime = 1
 
 bossname = 라타토스크
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 니다 니다벨리르고원으로 오세요
+mungtime = 1
 
 bossname = 수드리
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 니다 드베르크부락으로 오세요
+mungtime = 1
