--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 626398517241577482
 textchannel = 532129914401456140
 ladderchannel = 
 jungsanchannel = 
