--- a/boss.ini
+++ b/boss.ini
@@ -48,6 +48,8 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 요툰 익룡의안식처로 오세요
 mungtime = 1
 
+﻿-----요툰하임-----
+
 bossname = 라이노르
 gentime = 12:00
 nogencheck = 0
