--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 859396360121876480
 textchannel = 865075099790213120
 ladderchannel = 
 jungsanchannel = 
