--- a/boss.ini
+++ b/boss.ini
@@ -96,3 +96,10 @@ nogencheck = 0
 before_alert_ment = 입니다[니다 드베르크부락]
 alert_ment = 탐 입니다. 니다 드베르크부락으로 오세요
 mungtime = 1
+
+bossname = 지하4층보스
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다[지하감옥 4층]
+alert_ment = 탐 입니다. 정예던전 지하감옥4층으로 오세요
+mungtime = 1
