--- a/boss.ini
+++ b/boss.ini
@@ -97,7 +97,7 @@ before_alert_ment = 입니다[니다 드베르크부락]
 alert_ment = 탐 입니다. 니다 드베르크부락으로 오세요
 mungtime = 1
 
-bossname = 지하4층보스
+bossname = 4층보스
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다[지하감옥 4층]
