--- a/boss.ini
+++ b/boss.ini
@@ -72,7 +72,7 @@ mungtime = 1
 bossname = 스칼라니르
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다[요툰 고대종싸움터]
+before_alert_ment = 입니다[니다 죽은용의둥지]
 alert_ment = 탐 입니다. 니다 죽은용의둥지로 오세요
 mungtime = 1
 
