--- a/boss.ini
+++ b/boss.ini
@@ -104,43 +104,50 @@ before_alert_ment = 입니다[지하감옥 4층]
 alert_ment = 탐 입니다. 정예던전 지하감옥4층으로 오세요
 mungtime = 1
 
+bossname = 7층보스
+gentime = 24:00
+nogencheck = 0
+before_alert_ment = 입니다[지하감옥 7층]
+alert_ment = 탐 입니다. 정예던전 지하감옥7층으로 오세요
+mungtime = 1
+
 bossname = 스바르트
-gentime = 12:00
+gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다[알브 그림자 잠복처]
 alert_ment = 탐 입니다. 알브 그림자 잠복처로 오세요
 mungtime = 1
 
 bossname = 두라스로르
-gentime = 12:00
+gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다[알브 곰숲]
 alert_ment = 탐 입니다. 알브 곰숲 으로 오세요
 mungtime = 1
 
 bossname = 모네가름
-gentime = 12:00
+gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다[알브 타락협곡]
 alert_ment = 탐 입니다. 알브 타락협곡 으로 오세요
 mungtime = 1
 
 bossname = 드라우그
-gentime = 12:00
+gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다[알브 어둠달 고원]
 alert_ment = 탐 입니다. 알브 어둠달 고원 으로 오세요
 mungtime = 1
 
 bossname = 굴베이그
-gentime = 12:00
+gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다[알브 공허의 평원]
 alert_ment = 탐 입니다. 알브 공허의 평원 으로 오세요
 mungtime = 1
 
 bossname = 오딘
-gentime = 12:00
+gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다[알브 오딘 강림지]
 alert_ment = 탐 입니다. 알브 오딘 강림지 으로 오세요
